--- a/src/components/Questions/Imagechoice/ImageChoiceItemDesign.module.css
+++ b/src/components/Questions/Imagechoice/ImageChoiceItemDesign.module.css
@@ -35,4 +35,5 @@
   justify-content: center;
   text-align: center;
   vertical-align: middle;
+  cursor: pointer;
 }
